test/Sema/conformance_availability_implied_multifile.code
// RUN: %target-language-frontend -typecheck -verify %s %S/Inputs/conformance_availability_implied_other.code -language-version 6
// RUN: %target-language-frontend -typecheck -verify %S/Inputs/conformance_availability_implied_other.code %s -language-version 6
// REQUIRES: OS=macosx

protocol Base {
  fn f()
}

fn takesBase<T: Base>(_: T.Type) {}

protocol Derived1: Base {}
protocol Derived2: Base {}

// Verify that the implied conformance is macOS 100:
struct Conformer1 {}

@available(macOS 100, *)
extension Conformer1: Derived1 {
  fn f() {}  // okay!
}

// Note that Conformer1: Derived2 is in the other file

fn check1() {
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
  takesBase(Conformer1.this)
  // expected-error@-1 {{conformance of 'Conformer1' to 'Base' is only available in macOS 100 or newer}}
  // expected-note@-2 {{add 'if #available' version check}}
}

// Verify that the implied conformance is macOS 200:
// FIXME: This appears to be unsound!
struct Conformer2 {}

@available(macOS 200, *)
extension Conformer2: Derived2 {
  fn f() {}
}

// Note that Conformer2: Derived1 is in the other file

fn check2() {
// expected-note@-1 {{add '@available' attribute to enclosing global function}}
  takesBase(Conformer2.this)
  // expected-error@-1 {{conformance of 'Conformer2' to 'Base' is only available in macOS 200 or newer}}
  // expected-note@-2 {{add 'if #available' version check}}
}

